<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jigsaw Puzzle</string>
    <string name="action_settings">Settings</string>
    <string name="button_play">Play</string>
    <string name="button_instructions">Instructions</string>
    <string name="button_settings">Settings</string>
    <string name="button_viewPic">See Photo</string>
    <string name="button_newGame">New Game</string>
    <string name="button_change">"Change"</string>
    <string name="button_okay">Okay</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialogbox_instructions_title">Instructions</string>
    <string name="dialogbox_see_photo_message">"Original Photo\n\n(To close, tap anywhere oustide this dialog)"</string>
    <string name="dialogbox_see_photo_title">.</string>
    <string name="dialogbox_settings_warning_message">Changing the photo or the number of pieces when a game is in progress will cause the game to end and a new game will be started. Continue?</string>
    <string name="dialogbox_settings_warning_title">Warning</string>
    <string name="dialogbox_settings_warning_checkboxtext">Do not show this message again</string>
    <string name="dialogbox_settings_message"></string>
    <string name="dialogbox_settings_title">Settings</string>
    <string name="dialogbox_new_game_message">The current puzzle will be closed. Continue?</string>
    <string name="dialogbox_new_game_title">Confirmation</string>
    <string name="dialogbox_changePhoto_app">Select Photo from App Gallery</string>
    <string name="dialogbox_changePhoto_phone">Select Photo from Phone Gallery</string>
    <string name="dialogbox_changeNum">Change the Number of Pieces</string>
    <string name="dialogbox_changePhoto_title">Change Photo</string>
    <string name="dialogbox_no">No</string>
    <string name="dialogbox_yes">Yes</string>
    <string name="dialogbox_cancel">Cancel</string>
    <string name="dialogbox_settings_restoreDefaults">Restore Default Settings</string>
    <string name="textbox_current_photo">Current Photo:</string>
    <string name="textbox_photo_select">Select a Photo:</string>
    <string name="textbox_current_num"># Pieces:</string>
    <string name="textbox_num_pieces">Select the Number of Pieces:</string>
    <string name="title_activity_welcome">Jigsaw Puzzle</string>
    <string name="title_activity_welcome2">Welcome to Jigsaw!</string>
    <string name="title_activity_play_goodLuck">Good Luck!</string>
    <string name="title_activity_play_congrats">Congratulations!</string>
    <string name="title_activity_preview">Here\'s the Original Photo!</string>
    <string name="title_activity_select_image">Select a Photo</string>
    <string name="title_activity_select_num">Number of Pieces</string>
    <string name="title_activity_settings_background">Settings</string>
    <string name="title_activity_instructions">Instructions</string>
    
    <string name="ins_welcome">Welcome to Jigsaw!</string>
    <string name="ins_intro">The aim of the game is to arrange the pieces to recreate the original photo.</string>
    <string name="ins_selectPhotoTitle">Choosing a Photo</string>
    <string name="ins_selectPhotoMessage">"The app lets you choose among the 21 inbuilt photos or any photo from your phone gallery. You can also take a photo using the camera app and choose that photo from the gallery.\n\nTo choose an inbuilt photo, tap 'Settings' and choose 'Select Photo from App Gallery'.\n\nTo choose a photo from the phone gallery, tap 'Settings' and choose 'Select Photo from Phone Gallery'.</string>
    <string name="ins_selectNumTitle">Choosing the Number of Pieces</string>
    <string name="ins_selectNumMessage">"The app lets you pick the number of pieces to play with. You can choose either 4, 9, 16, 25, 36 or 49 pieces.\n\nTo select the number of pieces, tap 'Settings' and choose 'Change the Number of Pieces'."</string>
    <string name="ins_playTitle">How to Play</string>
    <string name="ins_playMessage">"Tap a piece to rotate it clockwise by 90 degrees.\n\nLong press on a piece and drag to move it. Dragging a piece on another piece will swap the 2 pieces.\n\nPieces that are incorrectly placed are indicated by a yellow border.\n\nTo see the full photo, tap 'See Photo'."</string>
    <string name="ins_goodLuck">"\nGood Luck!\n"</string>
    
    <string name="toast_finished">Yay! You solved the puzzle!</string>
    <string name="toast_settings_defaultsRestored">Default Settings Restored</string>
    <string name="content_description"></string>

</resources>
