<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context="com.puzzle.jigsaw.ActivityPlay" >

    <GridLayout
        android:id="@+id/layout_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >
    </GridLayout>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="android:attr/buttonBarStyle"
        android:background="#e5e5e5" >

        <Button
            android:id="@+id/button_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_instructions"
            android:textAppearance="?android:attr/textAppearanceLarge"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#323232"
            android:background="@android:color/white"
            android:layout_margin="5dp" />
                
        <Button
            android:id="@+id/button_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_settings"
            android:textAppearance="?android:attr/textAppearanceLarge"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#323232"
            android:background="@android:color/white"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        style="android:attr/buttonBarStyle"
        android:background="#e5e5e5"  >

        <Button
            android:id="@+id/button_viewPic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_viewPic"
            android:textAppearance="?android:attr/textAppearanceLarge"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#323232"
            android:background="@android:color/white"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/button_newGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_newGame"
            android:textAppearance="?android:attr/textAppearanceLarge"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#323232"
            android:background="@android:color/white"
            android:layout_margin="5dp" />

    </LinearLayout>

</RelativeLayout>