<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.puzzle.jigsaw.WelcomeActivity" >

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <!-- Horizontal Divider -->
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_thickness"
        android:layout_below="@id/iv_header"
        android:background="#cccccc" />

    <LinearLayout
        android:id="@+id/layout_container_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/layout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/textbox_current_photo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingTop="10dp" />

            <ImageView
                android:id="@+id/imageView_currentPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textView1"
                android:contentDescription="@string/content_description"
                android:padding="0dp"
                android:src="@drawable/ayers_rock" />

            <Button
                android:id="@+id/button_changePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView_currentPhoto"
                android:layout_centerHorizontal="true"
                android:paddingLeft="5dp"
                android:text="@string/button_change"
                android:textColor="#323232" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="@string/textbox_current_num"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/textView_currentNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_centerHorizontal="true"
                android:paddingBottom="15dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button_changeNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_currentNum"
                android:layout_centerHorizontal="true"
                android:paddingLeft="5dp"
                android:text="@string/button_change"
                android:textColor="#323232" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_header"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:visibility="invisible" />

        <!-- Vertical Divider -->

        <View
            android:layout_width="@dimen/divider_thickness"
            android:layout_height="match_parent"
            android:background="#cccccc" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        style="android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#e5e5e5"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_play"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/button_play"
            android:textColor="#323232" />

        <Button
            android:id="@+id/button_instructions"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/button_instructions"
            android:textColor="#323232" />

        <Button
            android:id="@+id/button_restoreDefaultSettings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/dialogbox_settings_restoreDefaults"
            android:textColor="#323232" />
    </LinearLayout>

</RelativeLayout>